Test fix of rendering

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://shinsina.github.io/Woodchips",
+  "homepage": "http://shinsina.github.io/Woodchips/",
   "name": "flashcards",
   "version": "0.1.0",
   "private": true,
